Fixed page alignment

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,7 +16,7 @@ and (max-device-width : 480px) {
 }
 
 .headerImage {
-	display:inline-block;
+	display:block;
 	margin: 10px;
 	margin-left: auto;
 	margin-right: auto;
@@ -24,7 +24,6 @@ and (max-device-width : 480px) {
 
 .mainContent {
 	padding-top: 20px;
-	padding-left: 30px;
 	text-align: center;
 }
 
